# gen-omnimatte-public

./: pyproject.toml
config/: __init__.py
genomnimatte/: __init__.py  api.py  config.py
inference/: __init__.py
omnimatte/: __init__.py
videox_fun/pipeline/: pipeline_cogvideox_fun_inpaint.py
